--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Phsychic game
     </title>
 </head>
@@ -24,9 +25,7 @@
 
     </div>
 
-    <script type="text/javascript" src="assets/javascript/game.js">
-       
-    </script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </body>
 
