abbreviate alphabet list, create alert for win, delete userChoice and use userGuess instead.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <h1>The Phsychic game</h1>
     <div>
-        <p id="directions-text">Guess the letter I'm thinking of!</p>
-        <p id="userchoice-text"></p>
+        <p>Guess the letter I'm thinking of!</p>
+
         <p id="UserGuess-text"></p>
         <p id="guessesLeft-text"></p>
         <p id="guessesSoFar-text"></p>
