--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <p id="UserGuess-text"></p>
         <p id="guessesLeft-text"></p>
-        <p id="guessesSoFar-text"></p>
+        Guesses so far: <span id="guessesSoFar-text"></span>
         <p id="wins-text"></p>
         <p id="losses-text"></p>
 
