Moved guessesSoFar content to keyup section instead of having it in a side section with keydown. no longer have the [object HTMLParagraphElement] displaying on the page and can see user guess.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <p id="UserGuess-text"></p>
         <p id="guessesLeft-text"></p>
-        Guesses so far: <span id="guessesSoFar-text"></span>
+        <a id="guessesSoFar-text"></a>
         <p id="wins-text"></p>
         <p id="losses-text"></p>
 
