--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <h1>The Phsychic game</h1>
     <div>
         <p>Guess the letter I'm thinking of!</p>
-
-        <p id="UserGuess-text"></p>
-        <p id="guessesLeft-text"></p>
-        <a id="guessesSoFar-text"></a>
-        <p id="wins-text"></p>
-        <p id="losses-text"></p>
+        <p>Wins: <span id="wins-text"></span></p>
+        <p>Losses: <span id="losses-text"></span></p>
+        <p>Guesses Left: <span id="guessesLeft-text"></span></p>
+        <p>Your guesses so far: <span id="guessesSoFar-text"></span></p>
 
     </div>
     <div id="game">
