--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Phsychic game
@@ -10,14 +11,22 @@
 </head>
 
 <body>
-    <h1>The Phsychic game</h1>
-    <div>
+    <h1 id="header">The Phsychic game</h1>
+    <div id="infoDisplay">
         <p>Guess the letter I'm thinking of!</p>
-        <p>Wins: <span id="wins-text"></span></p>
-        <p>Losses: <span id="losses-text"></span></p>
-        <p>Guesses Left: <span id="guessesLeft-text"></span></p>
-        <p>Your guesses so far: <span id="guessesSoFar-text"></span></p>
+        <div id="infoDiv1">
+            Wins: <span id="wins-text"></span>
+            Losses: <span id="losses-text"></span>
+        </div>
+        <div id="infoDiv2">
+            Guesses Left: <span id="guessesLeft-text"></span>
 
+        </div>
+        <div id="infoDiv3">
+            Your guesses so far:
+            <br>
+             <span id="guessesSoFar-text"></span>
+        </div>
     </div>
     <div id="game">
 
