Changed color scheme and added a description of the rules.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h1 id="header">The Phsychic game</h1>
     <div id="infoDisplay">
         <p>Guess the letter I'm thinking of!</p>
+        <p>You have 5 tries to guess the letter. When the letter is guessed, +1 to wins.
+        If the user cannot guess the letter, +1 to losses and a new letter will be selected.
+        </p>
         <div id="infoDiv1">
             Wins: <span id="wins-text"></span>
             Losses: <span id="losses-text"></span>
