--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1 id="header">The Phsychic game</h1>
+    <h1 id="header">The Psychic game</h1>
     <div id="infoDisplay">
         <p>Guess the letter I'm thinking of!</p>
         <p>You have 5 tries to guess the letter. When the letter is guessed, +1 to wins.
